--- a/SDL_001.cbp
+++ b/SDL_001.cbp
@@ -12,12 +12,14 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-g" />
+					<Add directory="src/core" />
 					<Add directory="src/display" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/SDL_001" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Battle" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
